--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
-  "python.testing.unittestArgs": ["-v", "-s", "./greet", "-p", "*test*.py"],
+  "python.testing.unittestArgs": 
+  [
+    "-v", 
+    "-s",
+    "./calc",
+    "./greet",
+    "-p", 
+    "*test*.py"],
   "python.testing.pytestEnabled": false,
   "python.testing.unittestEnabled": true
 }
+
